--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Алкомед</title>
 </head>
 <body>
@@ -23,8 +23,15 @@
                 <img src="img/icon/phone.svg" alt="phone">
                 <div class="text phone-text">+7 (4822) 319218</div>
             </div>
-            <a href="#!" class="btn">Консультация</a>
+            <a href="tel:+74822319218" class="btn">Консультация</a>
         </div>
+        <nav class="header__navigations">
+            <ul class="header__navigations__list">
+                <li>Главная</li>
+                <li>Услуги</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
     </header>
     <div class="slider__container">
         <div class="slider__content">
@@ -64,7 +71,7 @@
                     <div class="title__card">Вывод из запоя</div>
                     <div class="text card__text">Капельница от запоя и похмелья. Срочный выезда на дом.</div>
                     <div class="price">от 6500 руб.</div>
-                    <div class="btn">Позвонить!</div>
+                    <a href="tel:+74822319218" class="btn">Позвонить!</a>
                 </div>
             </div>
             <div class="services__card">
@@ -73,7 +80,7 @@
                     <div class="title__card">Вывод из запоя</div>
                     <div class="text card__text">Капельница от запоя и похмелья. Срочный выезда на дом.</div>
                     <div class="price">от 6500 руб.</div>
-                    <div class="btn">Позвонить!</div>
+                    <a href="tel:+74822319218" class="btn">Позвонить!</a>
                 </div>
             </div>
             <div class="services__card">
@@ -82,7 +89,7 @@
                     <div class="title__card">Вывод из запоя</div>
                     <div class="text card__text">Капельница от запоя и похмелья. Срочный выезда на дом.</div>
                     <div class="price">от 6500 руб.</div>
-                    <div class="btn">Позвонить!</div>
+                    <a href="tel:+74822319218" class="btn">Позвонить!</a>
                 </div>
             </div>
             <div class="services__card">
@@ -91,7 +98,7 @@
                     <div class="title__card">Вывод из запоя</div>
                     <div class="text card__text">Капельница от запоя и похмелья. Срочный выезда на дом.</div>
                     <div class="price">от 6500 руб.</div>
-                    <div class="btn">Позвонить!</div>
+                    <a href="tel:+74822319218" class="btn">Позвонить!</a>
                 </div>
             </div>
         </div>
@@ -203,24 +210,57 @@
                     <div class="title-2 footer">Наркологическая служба “Алко Мед”</div>
                     <div class="icon-text__block">
                         <img src="img/icon/place.svg" alt="place">
-                        <div class="text footer-text">Петербургское ш., 115, корп. 1, Тверь</div>
+                        <div class="text footer__text">Петербургское ш., 115, корп. 1, Тверь</div>
                     </div>
                     <div class="icon-text__block">
                         <img src="img/icon/phone.svg" alt="phone">
-                        <div class="text footer-text">+7 (4822) 319218</div>
+                        <div class="text footer__text">+7 (4822) 319218</div>
                     </div>
                 </div>
             </div>
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5cef3af9bee07068932688da4aabdb5b9e86a976bf9c38fd5d7112c3a984264c&amp;max-width=1150&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
-        <div class="background__right__block">
-            <div class="right__block">
-                <div class="text right__text">© Наркологическая служба «Алко Мед» , 2022 г.</div>
-                <div class="social__icon__block">
-                    <a href="#!"><img src="img/icon/ok.svg" alt="ok"></a>
-                    <a href="#!"><img src="img/icon/youtube.svg" alt="youtube"></a>
-                    <a href="#!"><img src="img/icon/w.svg" alt="whatsapp"></a>
+        <div class="background__footer__block">
+            <div class="footer__navigations__block container">
+                <div class="footer__columns">
+                    <div class="footer__column">
+                        <nav class="footer__navigations">
+                            <div class="footer__title">Меню сайта</div>
+                            <ul class="footer__navigations__list">
+                                <li>Главная</li>
+                                <li>Услуги</li>
+                                <li>Контакты</li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__column">
+                        <nav class="footer__navigations">
+                            <div class="footer__title">Услуги</div>
+                            <ul class="footer__navigations__list">
+                                <li>Главная</li>
+                                <li>Услуги</li>
+                                <li>Контакты</li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__column">
+                        <nav class="footer__navigations">
+                            <div class="footer__title">Контакты</div>
+                            <div class="text footer__text-2">Консультационный офис:</div>
+                            <div class="icon-text__block">
+                                <img src="img/icon/place.svg" alt="place">
+                                <div class="text footer__text-2">Петербургское ш., 115, корп. 1, Тверь</div>
+                            </div>
+                            <div class="icon-text__block">
+                                <img src="img/icon/phone.svg" alt="phone">
+                                <div class="text footer__text-2">+7 (4822) 319218</div>
+                            </div>
+                        </nav>
+                    </div>
                 </div>
+            </div>
+            <div class="right__block">
+                <div class="text footer__text__right__block">Вывод из запоя на дому в Твери «Алкомед», 2022 г. Сайт является колл-центром и оказывает только консультационные услуги. Медицинская деятельность ведется через местные партнерские клиники.</div>
             </div>
         </div> 
     </footer>
